Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>I believe that I am able in this moment to do my absolute best. I will learn from my past and I am planning for my future but at this moment, right now, I am empowered to be!</p>
